--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
   "keywords": [],
   "author": "Khaled Mohamed <Khal3d.Mohamed@gmail.com>",
   "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.38",
     "@types/jest": "^23.3.1",
+    "@types/lodash": "^4.14.116",
     "@types/mongoose": "^5.2.9",
     "@types/morgan": "^1.7.35",
     "@types/supertest": "^2.0.5",
+    "@types/validator": "^9.4.1",
     "husky": "^1.0.0-rc.13",
     "jest": "^23.5.0",
     "lint-staged": "^7.2.2",
@@ -56,13 +59,16 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
-    "mongoose": "^5.2.10",
-    "morgan": "^1.9.0"
+    "lodash": "^4.17.10",
+    "mongoose": "^5.2.12",
+    "morgan": "^1.9.0",
+    "validator": "^10.7.0"
   }
 }
