--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.38",
     "@types/jest": "^23.3.1",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/mongoose": "^5.2.9",
     "@types/morgan": "^1.7.35",
@@ -66,6 +67,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.12",
     "morgan": "^1.9.0",
