--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "watch:server": "nodemon dist/index.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
-    "test": "jest --forceExit --coverage --verbose",
+    "test": "jest --forceExit --verbose",
+    "test-coverage": "jest --forceExit --coverage --verbose",
     "watch:test": "npm run test -- --watchAll",
+    "watch:test-coverage": "npm run test-coverage -- --watchAll",
     "clean": "rimraf dist",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "prettier": "prettier --config ./.prettierrc --write \"src/**/*.ts\"",
@@ -33,9 +35,11 @@
   "keywords": [],
   "author": "Khaled Mohamed <Khal3d.Mohamed@gmail.com>",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^2.0.0",
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
+    "@types/crypto-js": "^3.1.43",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.38",
@@ -60,10 +64,12 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-async-errors": "^3.0.0",
