Implemented getUser method in CF Service
- Added declaration file for CodeforcesService
- Refactored the Get User test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "src/**/*"
   ],
   "files": [
-    "src/types/auth.d.ts"
+    "src/types/auth.d.ts",
+    "src/types/CodeforcesService.d.ts"
   ]
 }
