--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.38",
     "@types/jest": "^23.3.1",
+    "@types/joi": "^13.4.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/mongoose": "^5.2.9",
     "@types/morgan": "^1.7.35",
     "@types/supertest": "^2.0.5",
-    "@types/validator": "^9.4.1",
     "husky": "^1.0.0-rc.13",
     "jest": "^23.5.0",
     "lint-staged": "^7.2.2",
@@ -74,10 +74,10 @@
     "express": "^4.16.3",
     "express-async-errors": "^3.0.0",
     "helmet": "^3.13.0",
+    "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.12",
-    "morgan": "^1.9.0",
-    "validator": "^10.7.0"
+    "morgan": "^1.9.0"
   }
 }
