--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.12",
     "morgan": "^1.9.0"
   }
