--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Copy the file contents to .env and fill the missing keys
 MONGO_URI = ''
 JWT_SECRET = ''
+JWT_EXPIRY = ''
 PORT = 3000
 CF_KEY = ''
 CF_SECRET = ''
