--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Trainees monitoring application on Online Judges made for acmAscis",
   "main": "dist/index.js",
+  "engines": {
+    "node": "10.4.1",
+    "npm": "6.1.0"
+  },
   "scripts": {
     "start": "npm-run-all build start:server",
     "start:dev": "npm-run-all --parallel watch:ts watch:server",
