--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "npm": "6.1.0"
   },
   "scripts": {
-    "start": "npm-run-all build start:server",
+    "start": "npm run start:server",
     "start:dev": "npm-run-all --parallel watch:ts watch:server",
     "build": "npm-run-all clean build:ts",
     "start:server": "node dist/index.js",
     "watch:server": "nodemon dist/index.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
+    "postinstall": "npm run build:ts",
     "test": "jest --forceExit --verbose",
     "test-coverage": "jest --forceExit --coverage --verbose",
     "watch:test": "npm run test -- --watchAll",
