--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "npm run start:server",
-    "start:dev": "npm-run-all --parallel watch:ts watch:server",
+    "start:dev": "nodemon src/index.js",
     "build": "./node_modules/.bin/npm-run-all clean build:ts",
     "start:server": "node dist/index.js",
     "watch:server": "nodemon dist/index.js",
@@ -42,42 +42,44 @@
   "author": "Khaled Mohamed <Khal3d.Mohamed@gmail.com>",
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/bcrypt": "^2.0.0",
-    "@types/compression": "0.0.36",
+    "@types/bcrypt": "^3.0.0",
+    "@types/compression": "1.7.0",
     "@types/cors": "^2.8.9",
-    "@types/crypto-js": "^3.1.43",
-    "@types/dotenv": "^4.0.3",
+    "@types/crypto-js": "^4.0.1",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.9",
     "@types/helmet": "0.0.48",
-    "@types/jest": "^23.3.1",
+    "@types/jest": "^26.0.19",
     "@types/joi": "^13.4.4",
-    "@types/jsonwebtoken": "^7.2.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.167",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.2.9",
     "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.19",
     "@types/supertest": "^2.0.10",
-    "husky": "^1.0.0-rc.13",
-    "jest": "^23.5.0",
-    "lint-staged": "^7.2.2",
+    "husky": "^4.3.6",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "rimraf": "^2.6.2",
-    "supertest": "^3.1.0",
-    "ts-jest": "^23.1.4",
+    "rimraf": "^3.0.2",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.0.1"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "axios-retry": "^3.1.9",
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "crypto-js": "^3.1.9-1",
-    "dotenv": "^6.0.0",
+    "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.3.1",
@@ -85,7 +87,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.9",
+    "mongoose": "^5.2.12",
     "morgan": "^1.10.0"
   }
 }
