--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "npm run start:server",
-    "start:dev": "nodemon src/index.js",
+    "start:dev": "nodemon src/index.ts",
     "build": "./node_modules/.bin/npm-run-all clean build:ts",
     "start:server": "node dist/index.js",
     "watch:server": "nodemon dist/index.js",
@@ -67,6 +67,7 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
