--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "watch:test": "npm run test -- --watchAll",
     "watch:test-coverage": "npm run test-coverage -- --watchAll",
     "clean": "rimraf dist",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "lint": "eslint . --fix",
     "lint-staged": "lint-staged",
     "prettier": "prettier --config ./.prettierrc --write \"src/**/*.ts\"",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
@@ -34,8 +34,8 @@
   },
   "lint-staged": {
     "*.ts": [
-      "npm run prettier",
-      "git add"
+      "npm run lint",
+      "git add ."
     ]
   },
   "keywords": [],
@@ -58,6 +58,14 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.19",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^31.0.4",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
@@ -67,8 +75,6 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
